--- a/.gitignore
+++ b/.gitignore
@@ -131,5 +131,6 @@ dmypy.json
 # Ignore all .DS_Store files
 **/.DS_Store
 
-# Ignore weights directory
+# Ignore weights and data directory
 Weights/
+Data/
