--- a/.gitignore
+++ b/.gitignore
@@ -131,5 +131,5 @@ dmypy.json
 # Ignore all .DS_Store files
 **/.DS_Store
 
-# Ignore weights and data directory
-Weights/
+# Ignore weights
+Weights/imagenet1k_Mixer-B_16.npz
