--- a/.gitignore
+++ b/.gitignore
@@ -134,5 +134,6 @@ dmypy.json
 # Ignore weights
 Weights/imagenet1k_Mixer-B_16.npz
 Weights/gsam_Mixer-B_16.npz
+Weights/imagenet1k-Mixer-B_16.npz
 .DS_Store
 .DS_Store
