--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,4 @@ dmypy.json
 Weights/imagenet1k_Mixer-B_16.npz
 Weights/gsam_Mixer-B_16.npz
 Weights/imagenet1k-Mixer-B_16.npz
+Weights/imagenet21k_Mixer-B_16.npz
